# minecraft-installer

./: .gitignore  BUILD_AND_RELEASE.md  CONTINUOUS_BUILD.md  CROSS_COMPILE.md  CURSOR_AI_PROMPT.md  Cargo.toml  DEMO_WALKTHROUGH.md  Dockerfile.linux  FINAL_INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LAUNCHER_INTEGRATION.md  QUICK_START.md  README.md  RELEASE_NOTES.md  RELEASE_QUICK_GUIDE.md  RELEASE_SYSTEM.md  UPDATER_GUIDE.md  USAGE.md  build-all.bat  build-all.sh  build-linux.sh  build-macos.sh  build-simple.bat  build.bat  build.sh  create-release.bat  create-release.sh  debug_db.rs  electron-integration.js  mock-demo.bat  setup-cross-compile.bat  test-launcher-integration.bat  test-launcher-integration.sh  test_db_insert.rs
.github/workflows/: build.yml
examples/: test-all-launchers.rs
src/: directories.rs  download.rs  error.rs  installer.rs  java.rs  launcher_support.rs  lib.rs  main.rs  updater.rs
test-mrpack-analysis/: modrinth.index.json
test-mrpack-analysis/neoforge/: modrinth.index.json
tests/: launcher_structures.rs
tools/github/releases/: README.md  generate-installer-release-notes.cjs  generate-release-notes.cjs  generate-updater-release-notes.cjs  manage-github-releases.bat  manage-github-releases.sh  manage-installer-releases.bat  manage-installer-releases.sh  manage-updater-releases.bat  manage-updater-releases.sh
