[package]
name = "minecraft-installer"
version = "0.1.0"
edition = "2021"
authors = ["Minecraft Installer"]
description = "Standalone Minecraft installer extracted from AstralRinth"

[[bin]]
name = "minecraft-installer"
path = "src/main.rs"

[[bin]]
name = "debug-db"
path = "debug_db.rs"

[[bin]]
name = "test-db-insert"
path = "test_db_insert.rs"

[[bin]]
name = "minecraft-updater"
path = "src/bin/minecraft-updater.rs"

[lib]
name = "minecraft_installer"
path = "src/lib.rs"

[workspace]
# Empty workspace to prevent being included in parent workspace

[dependencies]
# Core async runtime
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"

# HTTP client and JSON handling
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File I/O and compression
zip = { version = "4.3", default-features = false, features = [
  "deflate",
  "bzip2",
] }
flate2 = "1.1"
sha1_smol = { version = "1.0", features = ["std"] }
sha2 = "0.10"
hex = "0.4"

# Utilities
dirs = "6.0"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line interface
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18"

# System info
sysinfo = { version = "0.36", default-features = false, features = ["system"] }

# Additional dependencies for launcher support

# Database support
rusqlite = { version = "0.32", features = ["bundled"] }

# Platform specific
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
